Use DHCP instead of custom handshake between daemon and the VM
The container running in the VM now uses a small dhcp client to get
details about connection and configure it.

VM will always have the same mac address by default. The DHCP static
leases on the daemon side ensures the VM always has the same IP.

--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -3,6 +3,8 @@ WORKDIR $APP_ROOT/src
 COPY . .
 RUN make
 
-FROM scratch
+FROM busybox
+COPY images/udhcpc.sh /usr/share/udhcpc/default.script
+RUN chmod +x /usr/share/udhcpc/default.script
 COPY --from=build /opt/app-root/src/bin/vm .
 ENTRYPOINT ["/vm"]
