--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,6 +10,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v2
 
@@ -29,6 +30,7 @@ jobs:
   tests:
     runs-on: macos-11 # Only Mac runners support nested virt
     needs: build # Don't bother testing if cross arch build fails
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v2
 
