--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,7 @@ jobs:
         name: gvproxy
         path: bin/gvproxy*
 
-  tests:
+  tests-macos:
     runs-on: macos-11 # Only Mac runners support nested virt
     needs: build # Don't bother testing if cross arch build fails
     timeout-minutes: 30
@@ -46,3 +46,22 @@ jobs:
 
     - name: Test
       run: make test
+
+  tests-linux:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up QEMU
+        run: sudo apt install --assume-yes binfmt-support qemu-user-static qemu-kvm
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+
+      - name: Test
+        run: make test
