--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -52,3 +52,22 @@ jobs:
       with:
         name: qcon
         path: test/qcon.log
+  
+  win-sshproxy-tests:
+    runs-on: windows-latest # Only builds/runs on windows
+    timeout-minutes: 30
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.17
+
+    - name: Build 
+      run: go build -ldflags -H=windowsgui -o bin/win-sshproxy.exe ./cmd/win-sshproxy
+      
+    - name: Test 
+      run: go test -v .\test-win-sshproxy
+
+
