systemd: Improve user-network.service naming/description
When this is installed in /etc/systemd/system/, the very generic unit
name/description can be a problem.

Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/contrib/systemd/gv-user-network.service
+++ b/contrib/systemd/gv-user-network.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=vsock_network
+Description=gvisor-tap-vsock Network Traffic Forwarder
 After=NetworkManager.service
 
 [Service]
