--- a/contrib/systemd/gv-user-network@.service
+++ b/contrib/systemd/gv-user-network@.service
@@ -3,10 +3,9 @@ Description=gvisor-tap-vsock Network Traffic Forwarder
 After=NetworkManager.service
 
 [Service]
-Environment=GV_TAP_DEVICE="vsock0"
 Environment=GV_VSOCK_PORT="1024"
 EnvironmentFile=-/etc/sysconfig/gv-user-network
-ExecStart=/usr/libexec/podman/vm -preexisting -iface ${GV_TAP_DEVICE} -url vsock://2:${GV_VSOCK_PORT}/connect
+ExecStart=/usr/libexec/podman/vm -preexisting -iface %i -url vsock://2:${GV_VSOCK_PORT}/connect
 
 [Install]
 WantedBy=multi-user.target
