systemd: Add dependency on the tap device
This ensures that the network device the systemd unit needs exists.

Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/contrib/systemd/gv-user-network@.service
+++ b/contrib/systemd/gv-user-network@.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=gvisor-tap-vsock Network Traffic Forwarder
 After=NetworkManager.service
+BindsTo=sys-devices-virtual-net-%i.device
+After=sys-devices-virtual-net-%i.device
 
 [Service]
 Environment=GV_VSOCK_PORT="1024"
