build: Rename vm to gvforwarder
This aligns the naming with 'gvproxy' and hopefully makes it a bit more
descriptive

Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -6,5 +6,5 @@ RUN make
 FROM busybox
 COPY images/udhcpc.sh /usr/share/udhcpc/default.script
 RUN chmod +x /usr/share/udhcpc/default.script
-COPY --from=build /opt/app-root/src/bin/vm .
-ENTRYPOINT ["/vm"]
+COPY --from=build /opt/app-root/src/bin/gvforwarder .
+ENTRYPOINT ["/gvforwarder"]
