Update packit targets
fedora 37 only has go 1.19, build will fail after we update
gvisor.dev/gvisor as it can only be built with golang 1.20 or newer.

Based on a patch from Lokesh Mandvekar

Signed-off-by: Lokesh Mandvekar <lsm5@fedoraproject.org>
Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/.packit.yaml
+++ b/.packit.yaml
@@ -18,6 +18,17 @@ jobs:
     srpm_build_deps:
       - make
       - rpkg
+    targets:
+      - fedora-rawhide-aarch64
+      - fedora-rawhide-x86_64
+      - fedora-eln-aarch64
+      - fedora-eln-x86_64
+      - fedora-38-aarch64
+      - fedora-38-x86_64
+      - centos-stream-9-aarch64
+      - centos-stream-9-x86_64
+      - centos-stream-8-aarch64
+      - centos-stream-8-x86_64
     actions:
       post-upstream-clone:
         - "rpkg spec --outdir ./"
@@ -29,3 +40,14 @@ jobs:
     #trigger: commit
     #branch: main
     #project: podman-next
+    #targets:
+    #  - fedora-rawhide-aarch64
+    #  - fedora-rawhide-x86_64
+    #  - fedora-eln-aarch64
+    #  - fedora-eln-x86_64
+    #  - fedora-38-aarch64
+    #  - fedora-38-x86_64
+    #  - centos-stream-9-aarch64
+    #  - centos-stream-9-x86_64
+    #  - centos-stream-8-aarch64
+    #  - centos-stream-8-x86_64
