--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,9 @@ jobs:
         go-version: 1.20.x
 
     - name: Build
-      run: make cross qemu-wrapper vm
+      run: |
+        make cross qemu-wrapper vm win-gvproxy win-sshproxy
+        mv bin/gvproxy.exe bin/gvproxy-windowsgui.exe
 
     - uses: actions/upload-artifact@v3
       with:
