--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -67,7 +67,7 @@ jobs:
         go-version: 1.20.x
 
     - name: Build 
-      run: go build -ldflags -H=windowsgui -o bin/win-sshproxy.exe ./cmd/win-sshproxy
+      run: make win-sshproxy
 
     - name: Test 
       run: go test -v .\test-win-sshproxy
