--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,7 +30,7 @@ jobs:
         path: bin/*
 
   tests:
-    runs-on: macos-11 # Only Mac runners support nested virt
+    runs-on: macos-latest # Only Mac runners support nested virt
     needs: build # Don't bother testing if cross arch build fails
     timeout-minutes: 30
     steps:
