--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-20.04 # explicitly use 20.04, see commit 428c40018a
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v3
