Packit: enable f39 downstream tasks
Signed-off-by: Lokesh Mandvekar <lsm5@redhat.com>

--- a/.packit.yaml
+++ b/.packit.yaml
@@ -62,15 +62,18 @@ jobs:
     update_release: false
     dist_git_branches:
       - fedora-rawhide
+      - fedora-39
       - fedora-38
 
   - job: koji_build
     trigger: commit
     dist_git_branches:
       - fedora-rawhide
+      - fedora-39
       - fedora-38
 
   - job: bodhi_update
     trigger: commit
     dist_git_branches:
       - fedora-38 # rawhide updates are created automatically
+      - fedora-39
