ghactions: add Go 1.22rc1
Signed-off-by: Akihiro Suda <akihiro.suda.cz@hco.ntt.co.jp>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,13 +11,17 @@ jobs:
   build:
     runs-on: ubuntu-20.04 # explicitly use 20.04, see commit 428c40018a
     timeout-minutes: 30
+    strategy:
+      fail-fast: false
+      matrix:
+        go-version: ["1.20.x", "1.21.x", "1.22.0-rc.1"]
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.20.x
+        go-version: ${{ matrix.go-version }}
 
     - name: Build
       run: |
