--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,9 @@ jobs:
         go-version: ["1.20.x", "1.21.x", "1.22.0-rc.1"]
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 # history/tags are needed for automatic version generation
+        fetch-tags: true
 
     - name: Set up Go
       uses: actions/setup-go@v3
