--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,7 @@ jobs:
         mv bin/gvproxy.exe bin/gvproxy-windowsgui.exe
 
     - uses: actions/upload-artifact@v3
+      if: ${{ matrix.go-version }} == '1.21.x'
       with:
         name: gvisor-tap-vsock-binaries
         path: bin/*
