--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ["1.20.x", "1.21.x", "1.22.0-rc.1"]
+        go-version: ["1.20.x", "1.21.x", "1.22.x"]
     steps:
     - uses: actions/checkout@v4
       with:
