ghactions: Use ubuntu runner for tests
M1 macos runners can't build our test code, and the M1 runners don't
support nested virt, which is required by `make test`
Since I expect in the future the x86_64 macos runners to go away, and
since the ubuntu runners now support nested virt, this commit uses an
ubuntu runner to run `make test`.

This fixes https://github.com/containers/gvisor-tap-vsock/issues/358

Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,16 +38,16 @@ jobs:
         path: bin/*
 
   tests:
-    runs-on: macos-latest # Only Mac runners support nested virt
+    runs-on: ubuntu-latest # The runner must support nested virt
     needs: build # Don't bother testing if cross arch build fails
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install
+    - name: Install qemu
       run: |
-        brew install qemu
-        touch continue
+        sudo apt install qemu-kvm
+        sudo usermod -a -G kvm $USER
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -55,7 +55,8 @@ jobs:
         go-version-file: 'go.mod'
 
     - name: Test
-      run: make test
+      run: |
+        sudo -s -u ${USER} bash -c 'make test'
 
     - uses: actions/upload-artifact@v4
       if: always()
