--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: 1.20.x
+        go-version-file: 'go.mod'
 
     - name: Test
       run: make test
@@ -72,12 +72,12 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: 1.20.x
+        go-version-file: 'go.mod'
 
-    - name: Build 
+    - name: Build
       run: make win-sshproxy
 
-    - name: Test 
+    - name: Test
       run: go test -v .\test-win-sshproxy
 
 
