ghactions: Run `apt update` before installing packages
github actions are currently failing with
```
E: Failed to fetch mirror+file:/etc/apt/apt-mirrors.txt/pool/main/g/gst-plugins-base1.0/libgstreamer-plugins-base1.0-0_1.24.2-1ubuntu0.1_amd64.deb  404  Not Found [IP: 52.252.163.49 80]
E: Failed to fetch mirror+file:/etc/apt/apt-mirrors.txt/pool/main/g/gst-plugins-base1.0/gstreamer1.0-plugins-base_1.24.2-1ubuntu0.1_amd64.deb  404  Not Found [IP: 52.252.163.49 80]
E: Failed to fetch mirror+file:/etc/apt/apt-mirrors.txt/pool/main/g/gst-plugins-base1.0/gstreamer1.0-x_1.24.2-1ubuntu0.1_amd64.deb  404  Not Found [IP: 52.252.163.49 80]
E: Unable to fetch some archives, maybe run apt-get update or try with --fix-missing?
```

The apt metadata does not seem to be updated before trying to install
these packages which could this issue.

Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,6 +46,7 @@ jobs:
 
     - name: Install qemu
       run: |
+        sudo apt update
         sudo apt install qemu-kvm
         sudo usermod -a -G kvm $USER
 
