--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,8 +30,19 @@ jobs:
 
     - name: Build
       run: |
-        make cross qemu-wrapper vm win-gvproxy win-sshproxy
+        make cross qemu-wrapper vm win-gvproxy win-sshproxy image
         mv bin/gvproxy.exe bin/gvproxy-windowsgui.exe
+
+    - name: Log in to Quay.io
+      uses: redhat-actions/podman-login@v1
+      with:
+        username: ${{ secrets.QUAY_USER_NAME }}
+        password: ${{ secrets.QUAY_PASSWORD }}
+        registry: quay.io
+
+    - name: Push Image
+      run: |
+        make push
 
     - uses: actions/upload-artifact@v4
       with:
