gha: Switch to ubuntu 22.04
The 20.04 image is deprecated and will soon be removed.

Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-20.04 # explicitly use 20.04, see commit 428c40018f
+    runs-on: ubuntu-22.04 # explicitly use older ubuntu, see commit 428c40018f
     timeout-minutes: 30
     strategy:
       fail-fast: false
