ci: Use cross-lint in GitHub Actions workflow
Signed-off-by: Gunjan Vyas <vyasgun20@gmail.com>

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           go-version-file: 'go.mod'
       - name: golangci-lint
-        run: make lint
+        run: make cross-lint
