config: add option to configure IP addresses through command line
Adds command line arguments to configure subnet, gateway IP, device IP,
host IP, with default values. Specifying only the subnet without other
IPs will generate appropriate IPs for use.
Also adds new entries to config.yaml (`deviceIP`, `hostIP`).

--- a/cmd/gvproxy/config.yaml
+++ b/cmd/gvproxy/config.yaml
@@ -1,5 +1,5 @@
 ###
-### This example config implements the legacy behavior, same as
+### This example config implements the legacy behavior, same as if
 ### you didn't provide any
 ###
 log-level: info
@@ -7,6 +7,8 @@ stack:
     mtu: 1500
     subnet: 192.168.127.0/24
     gatewayIP: 192.168.127.1
+    deviceIP: 192.168.127.2
+    hostIP: 192.168.127.254
     gatewayMacAddress: 5a:94:ef:e4:0c:dd
     dns:
         - name: containers.internal.
